12. Added grid and testimonials element. fixed some layout issues
Grid is simple and can be found in components. Testimonial is a combination of card grid quote and media. the bugs fixed: in-page scroll and y-scroll in body

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,11 @@
 html {
   font-size: 62.5%;
 }
-
+html,
+body {
+  overflow-y: scroll;
+  height: 100%;
+}
 body {
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   color: var(--color-body);
@@ -45,7 +49,15 @@ h3 {
 p {
   margin-top: 0rem;
 }
-
+img {
+  object-fit: contain;
+  height: 100%;
+  width: 100%;
+}
+div > img {
+  justify-content: center;
+  align-items: center;
+}
 @media only screen and (min-width: 1024px) {
   body {
     font-size: 1.8rem;
@@ -191,9 +203,9 @@ a {
   background: url("../images/css_sprites.png") -542px -1074px;
 }
 .bg-quotes {
-  width: 512px;
+  width: 550px;
   height: 512px;
-  background: url("../images/css_sprites.png") -1074px -1074px;
+  background: url("../images/css_sprites.png") -1045px -1074px;
 }
 .bg-unicorn {
   width: 512px;
@@ -207,17 +219,17 @@ a {
 }
 /*ICONS*/
 .icon {
-  zoom: 0.12;
+  zoom: 0.1;
 }
-
 .icon-container {
-  /* background-color: var(--color-secondary); */
+  /* background-color: #a17765; /*var(--color-secondary); */
   align-items: center;
   border-radius: 100%;
   display: inline-flex;
   height: 64px;
   justify-content: center;
   width: 64px;
+  justify-content: center;
 }
 
 /*Buttons*/
@@ -425,6 +437,7 @@ a {
 /*MEDIA*/
 .media {
   display: flex;
+  position: relative;
 }
 .media__title {
   margin: 0;
@@ -436,12 +449,14 @@ a {
 }
 .media__image {
   margin-top: 2rem;
+  display: inline;
+  vertical-align: middle;
 }
 
 /*QUOTES*/
 .quote {
   color: var(--color-darker);
-  font-size: 3rem;
+  font-size: 2rem;
   font-style: oblique;
   font-weight: 500;
   line-height: 1.3;
@@ -457,7 +472,7 @@ a {
   font-style: normal;
 }
 .quote__author {
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-style: normal;
   margin-bottom: 0;
 }
@@ -471,12 +486,74 @@ a {
 }
 @media only screen and (min-width: 1024px) {
   .quote__author {
-    font-size: 2rem;
+    font-size: 2.8rem;
   }
   .quote__text {
     font-size: 2.5rem;
   }
   .quote_organization {
     font-size: 2.3rem;
+  }
+  .testimonial .quote {
+    margin-left: 4rem;
+    vertical-align: center;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .quote__author {
+    font-size: 2.2rem;
+  }
+  .quote__text {
+    font-size: 2.3rem;
+  }
+  .quote_organization {
+    font-size: 2.3rem;
+  }
+  .testimonial .quote {
+    margin: 3rem;
+    vertical-align: center;
+  }
+}
+/*GRIDS*/
+.grid {
+  display: grid;
+}
+@media only screen and (min-width: 768px) {
+  .grid--col2 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .grid--col3 {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+/*Testimonials*/
+.testimonial {
+  margin: 3rem;
+  box-shadow: 0 0 20px 10px #dddddd;
+}
+.testimonial__image {
+  position: relative;
+}
+.testimonial__image > .icon-container {
+  position: absolute;
+  top: 1rem;
+  right: -32px;
+  opacity: 0.4;
+}
+.testimonial > .quote__text {
+  padding-top: 3rem;
+}
+@media only screen and (max-width: 768px) {
+  .grid > .testimonial__image > .icon-container {
+    position: absolute;
+    top: 99rem;
+    left: 1px;
+    opacity: 0.6;
+  }
+
+  .quote__text {
+    padding: 2rem;
   }
 }
